...
        form +++

            Section() {
                $0.header = HeaderFooterView<EurekaLogoView>(.class)
            }

                <<< ButtonRow("Rows") {
                        $0.title = $0.tag
                        $0.presentationMode = .segueName(segueName: "RowsExampleViewControllerSegue", onDismiss: nil)
                    }

                <<< ButtonRow("Native iOS Event Form") { row in
                        row.title = row.tag
...
                <<< TextRow() {
                        $0.title = "TextRow"
                        $0.placeholder = "Placeholder"
                    }

                <<< DecimalRow() {
                        $0.title = "DecimalRow"
                        $0.value = 5
                        $0.formatter = DecimalFormatter()
                        $0.useFormatterDuringInput = true
                        //$0.useFormatterOnDidBeginEditing = true
                    }.cellSetup { cell, _  in
                        cell.textField.keyboardType = .numberPad
...
                <<< PasswordRow() {
                        $0.title = "PasswordRow"
                        $0.value = "password"
                    }

                <<< IntRow() {
                        $0.title = "IntRow"
                        $0.value = 2015
                    }

                <<< EmailRow() {
                        $0.title = "EmailRow"
                        $0.value = "a@b.com"
...
                            $0.title = "Tap to select"
                            $0.value = "client"
                            $0.options = nameList
                         }
        }

        editButton.title = tableView.isEditing ? "Done" : "Edit"
        editButton.target = self
        editButton.action = #selector(editPressed(sender:))

        form    +++

                section
...

                let moreAction = SwipeAction(style: .normal, title: "More", handler: { (action, row, completionHandler) in
                    print("More")
                    completionHandler?(true)
                })

                let deleteAction = SwipeAction(style: .destructive, title: "Delete") { (action, row, completionHandler) in
                    print("Delete")
                    completionHandler?(true)
                }

                $0.trailingSwipe.actions = [deleteAction,moreAction]

...
